--- a/mileschristitheme/style.css
+++ b/mileschristitheme/style.css
@@ -294,7 +294,7 @@ nav > div .nav-icons {
   display: block;
   border: none;
   border-radius: 3px;
-  background-color: #1c3343;
+  background-color: #3d5c71;
   color: white;
   padding: 16px;
   font-size: 1.1em;
