--- a/mileschristitheme/style.css
+++ b/mileschristitheme/style.css
@@ -428,6 +428,34 @@ nav > div .nav-icons {
   background-color: #52646f;
 }
 
+/* Apostolados */
+.apostolados{
+  /* background-color: #e8eaec; */
+  background-color: #fafafa;
+  padding-top: 1px;
+  padding-bottom: 22px;
+  margin-top: 10px;
+}
+
+.apostolados img {
+  width: 100%;
+  height: 100%;
+}
+
+.apostolados h4 {
+  text-align: center;
+}
+
+.apostolados div{
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  margin: 20px 0;
+  margin: 0 auto;
+  /* grid-template-rows: repeat(2, 100px); */
+	/* grid-auto-rows: 100px; */
+}
+
 /* Instagram */
 .instagram {
   text-align: center;
@@ -567,6 +595,11 @@ footer .inner-footer a:hover {
     flex:1;
     margin-left: 10px;
   }
+
+  .apostolados h4 {
+    font-size: 1.3em;
+  }
+  
   .instagram h4 {
     font-size: 1.3em;
   }
