--- a/mileschristitheme/style.css
+++ b/mileschristitheme/style.css
@@ -91,6 +91,34 @@ h2, h3, h4 {
   background-color: #3D5C71;
 }
 
+.mt-100 {
+  margin-top: 100px;
+}
+
+.my-20 {
+  margin: 30px 0;
+}
+
+.post-content > * {
+  margin: 22px 0;
+}
+
+.post-thumbnail img{
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
+blockquote {
+  background-color: rgb(239,239,239,.4);
+  padding: 18px;
+  border-left: 5px solid #3D5C71;
+  border-radius: 5px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 1.8em;
+}
+
 /* NAVIGATION */
 .logo {
   height: 60px;
