--- a/mileschristitheme/style.css
+++ b/mileschristitheme/style.css
@@ -374,7 +374,9 @@ nav > div .nav-icons {
 
 /* Other resources */
 
+
 .resource {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -382,6 +384,7 @@ nav > div .nav-icons {
   padding: 0 1em;
   text-align: center;
   margin-bottom: 16px;
+  line-height: 1.2em;
 }
 
 .resource .iconify {
@@ -392,6 +395,7 @@ nav > div .nav-icons {
 
 .resource h3 {
   font-weight: 200;
+  font-size: 1em;
 }
 
 .resource p {
