--- a/mileschristitheme/style.css
+++ b/mileschristitheme/style.css
@@ -445,6 +445,31 @@ nav > div .nav-icons {
 .retreats {
   position: relative;
   margin: 20px 0;
+  display: flex;
+}
+
+.retreats::before {
+  content: '.';
+  color:white;
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 20px;
+  background-color: white;
+  border-radius: 0 0 100% 100%;
+}
+
+.retreats::after {
+  content: '.';
+  color:white;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 20px;
+  background-color: white;
+  border-radius: 100% 100% 0 0 ;
 }
 
 .retreats h3{
@@ -477,6 +502,7 @@ nav > div .nav-icons {
 
 .retreats img {
   height: 100%;
+  z-index: -10;
 }
 
 .retreats-text {
@@ -495,6 +521,7 @@ nav > div .nav-icons {
   top: 0px;
   height: 100%;
   width: 100%;
+  z-index: -1;
 }
 
 /* Other resources */
